clean: イベント検索のロジックを調整
